Development Issues - Bell Icon - Not Working - Image Click Form - Not Working - Image Click Form - Hyperlink not showing

--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -23,6 +23,9 @@ body {
 	a {
 		outline: none !important;
 	}
+  .open-b2cpopup,.open-b2bpopup,.open-ipopopup,.open-pmspopup{
+    cursor: pointer;
+  }
 
 }
 
